# webrtc_demo

./: .gitignore  CMakeLists.txt  README.md
cmake/: LibWebRTC.cmake  WebrtcPushSdkConfig.cmake.in
config/: streams.conf
docs/: ARCHITECTURE.md  DIAGNOSIS.md  UDP_ICE_ANALYSIS.md  e2e_weaknet_playbook.md  linux_arm64_build_notes.md  runtime_knobs.md  本地推拉流测试步骤.md
examples/p2p_player/: CMakeLists.txt  main.cpp  p2p_player.cpp  p2p_player.h  sdl_display.cpp  sdl_display.h
include/: camera_utils.h  capture_bridge.h  config_loader.h  pull_subscriber.h  push_streamer.h  signaling_client.h  webrtc_field_trials.h  webrtc_peer_connection_factory.h
include/platform/: alsa_null_fallback.h
include/webrtc/: rk_mpp_video_encoder_factory.h
include/webrtc/hw/: backend_registry.h
include/webrtc/hw/rockchip_mpp/: h264_encoder.h  native_dec_frame_buffer.h
include/webrtc/signaling/: client.h
include/webrtc/utils/: json_utils.h  net_io.h
include/webrtc_demo/: sdk.h
scripts/: build.sh  e2e_headless_once.sh  kill_webrtc_demo.sh  pull.sh  pull_e2e_with_rss.sh  push.sh  rss_watch.sh  test_capture_quick.sh  test_p2p_headless.sh
src/: main.cpp
src/app/: pull_demo.cpp  push_demo.cpp
src/camera_utils/: camera_utils.cpp
src/capture_bridge/: capture_bridge.cpp
src/push_streamer/: push_streamer.cpp
src/sdk/camera/: camera_utils.cpp
src/sdk/media/: camera_video_track_source.cpp  camera_video_track_source.h  pull_subscriber.cpp  push_streamer.cpp
src/sdk/platform/: alsa_null_fallback.cpp
src/sdk/signaling/: signaling_client.cpp  signaling_server_main.cpp
src/sdk/webrtc/: mpp_native_dec_frame_buffer.cpp  mpp_native_dec_frame_buffer.h  peer_connection_factory.cpp  rk_mpp_h264_encoder.cpp  rk_mpp_h264_encoder.h  rk_mpp_mjpeg_decoder.cpp  rk_mpp_mjpeg_decoder.h  rk_mpp_video_encoder_factory.cpp
src/sdk/webrtc/hw/rockchip_mpp/: h264_decoder.cpp  h264_encoder.cpp  mjpeg_decoder.cpp  native_dec_frame_buffer.cpp  video_encoder_factory.cpp
src/signaling_client/: signaling_client.cpp
src/signaling_server/: signaling_server.cpp
src/webrtc_field_trials/: webrtc_field_trials.cpp
tools/: analyze_latency_report.py  explain_e2e_outliers.py  parse_e2e_latency.py  run_e2e_baseline.py  run_e2e_regression.py  run_e2e_weaknet.sh  run_e2e_with_system_trace.sh  stage_jitter_breakdown.py  summarize_push_pipeline.py  summarize_server_e2e_tx.py
